# FPV-Drone-AI-Agent

./: BUILD_GUI.bat  BUILD_SUMMARY.md  CMakeLists.txt  CMakePresets.json  QUICKSTART.md  README.md  vcpkg.json
include/app/: Bootstrap.hpp  DeviceWatcher.hpp  ServiceLocator.hpp
include/flight/: ArduPilotGuidedAdapter.hpp  CommandArbiter.hpp  TakeoffLand.hpp  VelocityController.hpp
include/gui/: MainWindow.hpp  MissionPane.hpp  PromptPane.hpp  SafetyPane.hpp  TelemetryPane.hpp  VideoPane.hpp
include/llm/: JsonPlanParser.hpp  LlmClient.hpp  PromptCompiler.hpp
include/planning/: MissionExecutor.hpp  MissionPlanner.hpp  MissionTypes.hpp  TaskGraph.hpp
include/safety/: AbortController.hpp  BatteryGuard.hpp  Geofence.hpp  LinkLossGuard.hpp  RuleEngine.hpp
include/telemetry/: HeartbeatMonitor.hpp  MavlinkTransport.hpp  VehicleStateStore.hpp
include/video/: FrameBus.hpp  RtspSource.hpp  UvcSource.hpp  VideoSource.hpp
models/llm/: README.md
scripts/: README.md  build.bat  build_and_run_gui.bat  build_gui.ps1  demo_cli.bat  set_cmake_env.bat  start_cli_interactive.bat  start_gui.bat  start_launcher.bat  start_llm_server.bat  start_sitl.bat
src/: main.cpp
src/app/: Bootstrap.cpp  DeviceWatcher.cpp  ServiceLocator.cpp
src/flight/: ArduPilotGuidedAdapter.cpp  CommandArbiter.cpp  TakeoffLand.cpp  VelocityController.cpp
src/gui/: MainWindow.cpp  MissionPane.cpp  PromptPane.cpp  SafetyPane.cpp  TelemetryPane.cpp  VideoPane.cpp  gui_main.cpp
src/llm/: JsonPlanParser.cpp  LlmClient.cpp  PromptCompiler.cpp
src/msp/: MspClient.cpp
src/planning/: MissionExecutor.cpp  MissionPlanner.cpp  TaskGraph.cpp
src/safety/: AbortController.cpp  BatteryGuard.cpp  Geofence.cpp  LinkLossGuard.cpp  RuleEngine.cpp
src/telemetry/: HeartbeatMonitor.cpp  MavlinkTransport.cpp  VehicleStateStore.cpp
src/video/: FrameBus.cpp  RtspSource.cpp  UvcSource.cpp  VideoSource.cpp
test/integration/: README.md
test/sim/: README.md
test/unit/: test_config_wiring.cpp  test_device_detection.cpp  test_pipeline.cpp  test_transports.cpp
tools/launcher/: main.cpp
